[project]
name = "merleau"
version = "0.4.2"
description = "Video analysis using Google's Gemini 2.5 Flash API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "python-dotenv",
]

[project.optional-dependencies]
web = ["streamlit>=1.30.0"]

[project.scripts]
ponty = "merleau.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
