[project]
name = "merleau"
version = "0.5.2"
description = "Video analysis using Google's Gemini 2.5 Flash API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "google-genai",
    "python-dotenv",
]

[project.optional-dependencies]
web = ["streamlit>=1.30.0"]

[project.scripts]
ponty = "merleau.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
